--- a/src/components/ArticleItem/ArticleItem.module.scss
+++ b/src/components/ArticleItem/ArticleItem.module.scss
@@ -88,6 +88,7 @@ text-align: left;
         img{  
             height: 46px;
             width: 46px;
+            border-radius: 50%;
         }
     }
 }
