--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -16,6 +16,7 @@ header{
     }
     .right{
         display: flex;
+        align-items: center;
         .sign-in{
             background: none;
             border: none;
@@ -30,7 +31,7 @@ header{
             line-height: 28px;
             letter-spacing: 0%;
             margin-right: 19px;
-    
+            cursor: pointer;
         }
         .sign-up{
             background: none;
@@ -43,6 +44,60 @@ header{
             font-weight: 400;
             line-height: 28px;
             margin-right: 22px;
+            cursor: pointer;
+        }
+        .createArticle{
+            box-sizing: border-box;
+            border: 1px solid rgb(82, 196, 26);
+            border-radius: 5px;
+            color: rgb(82, 196, 26);
+            font-size: 14px;
+            font-weight: 400;
+            line-height: 22px;
+            letter-spacing: 0px;
+            text-align: left;
+            background-color: #FFF;
+            padding: 6px 10px;
+            margin-right: 27px;
+            cursor: pointer;
+
+        }
+        h2{
+            /* H6 - Header 6 */
+            color: rgba(0, 0, 0, 0.85);
+            font-size: 18px;
+            font-weight: 400;
+            line-height: 28px;
+            letter-spacing: 0%;
+            text-align: left;
+            cursor: pointer;
+
+            margin-right: 13px;
+        }
+        img{
+            height: 46px;
+            width: 46px;
+            margin-right: 27px;
+            border-radius: 50%;
+            cursor: pointer;
+
+        }
+        .logOut{/* H6 - Header 6 */
+            color: rgba(0, 0, 0, 0.75);
+            font-size: 18px;
+            font-weight: 400;
+            line-height: 28px;
+            letter-spacing: 0%;
+            text-align: left;
+            box-sizing: border-box;
+            /* @text-color */
+            border: 1px solid rgba(0, 0, 0, 0.75);
+            border-radius: 5px;
+            background-color: #FFF;
+            padding: 10px 18px;
+            cursor: pointer;
+            margin-right: 22px;
+
         }
     }
     
