--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,104 +1,104 @@
-header{
-    height: 80px;
-    background-color: #FFF;
+header {
+  height: 80px;
+  background-color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 26px;
+  h1 {
+    margin-left: 22px;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 28px;
+    letter-spacing: 0em;
+    text-align: left;
+  }
+  .right {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    margin-bottom: 26px;
-    h1{
-        margin-left: 22px;
-        font-size: 18px;
-        font-weight: 400;
-        line-height: 28px;
-        letter-spacing: 0em;
-        text-align: left;
-        
+    .profile {
+      display: flex;
+      align-items: center;
     }
-    .right{
-        display: flex;
-        align-items: center;
-        .sign-in{
-            background: none;
-            border: none;
-            width: 84px;
-            height: 35px;
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            color: rgba(0, 0, 0, 0.85);
-            font-size: 18px;
-            font-weight: 400;
-            line-height: 28px;
-            letter-spacing: 0%;
-            margin-right: 19px;
-            cursor: pointer;
-        }
-        .sign-up{
-            background: none;
-            border: none;
-            box-sizing: border-box;
-            border: 1px solid rgb(82, 196, 26);
-            border-radius: 5px;
-            color: rgb(82, 196, 26);
-            font-size: 18px;
-            font-weight: 400;
-            line-height: 28px;
-            margin-right: 22px;
-            cursor: pointer;
-        }
-        .createArticle{
-            box-sizing: border-box;
-            border: 1px solid rgb(82, 196, 26);
-            border-radius: 5px;
-            color: rgb(82, 196, 26);
-            font-size: 14px;
-            font-weight: 400;
-            line-height: 22px;
-            letter-spacing: 0px;
-            text-align: left;
-            background-color: #FFF;
-            padding: 6px 10px;
-            margin-right: 27px;
-            cursor: pointer;
-
-        }
-        h2{
-            /* H6 - Header 6 */
-            color: rgba(0, 0, 0, 0.85);
-            font-size: 18px;
-            font-weight: 400;
-            line-height: 28px;
-            letter-spacing: 0%;
-            text-align: left;
-            cursor: pointer;
-
-            margin-right: 13px;
-        }
-        img{
-            height: 46px;
-            width: 46px;
-            margin-right: 27px;
-            border-radius: 50%;
-            cursor: pointer;
-
-        }
-        .logOut{/* H6 - Header 6 */
-            color: rgba(0, 0, 0, 0.75);
-            font-size: 18px;
-            font-weight: 400;
-            line-height: 28px;
-            letter-spacing: 0%;
-            text-align: left;
-            box-sizing: border-box;
-            /* @text-color */
-            border: 1px solid rgba(0, 0, 0, 0.75);
-            border-radius: 5px;
-            background-color: #FFF;
-            padding: 10px 18px;
-            cursor: pointer;
-            margin-right: 22px;
-
-        }
+    .sign-in {
+      background: none;
+      border: none;
+      width: 84px;
+      height: 35px;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      color: rgba(0, 0, 0, 0.85);
+      font-size: 18px;
+      font-weight: 400;
+      line-height: 28px;
+      letter-spacing: 0%;
+      margin-right: 19px;
+      cursor: pointer;
     }
-    
+    .sign-up {
+      background: none;
+      border: none;
+      box-sizing: border-box;
+      border: 1px solid rgb(82, 196, 26);
+      border-radius: 5px;
+      color: rgb(82, 196, 26);
+      font-size: 18px;
+      font-weight: 400;
+      line-height: 28px;
+      margin-right: 22px;
+      cursor: pointer;
+    }
+    .createArticle {
+      box-sizing: border-box;
+      border: 1px solid rgb(82, 196, 26);
+      border-radius: 5px;
+      color: rgb(82, 196, 26);
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 22px;
+      letter-spacing: 0px;
+      text-align: left;
+      background-color: #fff;
+      padding: 6px 10px;
+      margin-right: 27px;
+      cursor: pointer;
+    }
+    h2 {
+      /* H6 - Header 6 */
+      color: rgba(0, 0, 0, 0.85);
+      font-size: 18px;
+      font-weight: 400;
+      line-height: 28px;
+      letter-spacing: 0%;
+      text-align: left;
+      cursor: pointer;
+
+      margin-right: 13px;
+    }
+    img {
+      height: 46px;
+      width: 46px;
+      margin-right: 27px;
+      border-radius: 50%;
+      cursor: pointer;
+    }
+    .logOut {
+      /* H6 - Header 6 */
+      color: rgba(0, 0, 0, 0.75);
+      font-size: 18px;
+      font-weight: 400;
+      line-height: 28px;
+      letter-spacing: 0%;
+      text-align: left;
+      box-sizing: border-box;
+      /* @text-color */
+      border: 1px solid rgba(0, 0, 0, 0.75);
+      border-radius: 5px;
+      background-color: #fff;
+      padding: 10px 18px;
+      cursor: pointer;
+      margin-right: 22px;
+    }
+  }
 }
