--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
-*{
+* {
   margin: 0;
-  padding:0 ;
+  padding: 0;
 }
-body{
+body {
   height: 100vh;
-  background: #EBEEF3;
+  background: #ebeef3;
 }
